attempted the html and css

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,6 +18,16 @@
 
     </div>
 
+<div id = "aa">
+<input type="number">
+<input type="number">
+<button></button>
+<button></button>
+<button></button>
+<button></button>
+</div>
+
+
     <!-- Library Files -->
     <script src="/libs/angular.min.js"></script>
     <script src="/libs/angular-resource.min.js"></script>
