comment out extra code

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,14 +15,14 @@
         <ui-view></ui-view>
     </div>
 
-<div id = "aa">
+<!-- <div id = "aa">
 <input type="number">
 <input type="number">
 <button></button>
 <button></button>
 <button></button>
 <button></button>
-</div>
+</div> -->
 
 
     <!-- Library Files -->
